unpackaged/main/default/objects/recordSP__c/recordSP__c.object-meta.xml
<CustomObject>
    <label>recordSP</label>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>recordsSP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>