unpackaged/main/default/objects/recordSP__c/fields/ApprovalDataSP_Buscar__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDataSP_Buscar__c</fullName>
    <label>ApprovalDataSP</label>
    <referenceTo>ApprovalDataSP__c</referenceTo>
    <relationshipLabel>recordsSP</relationshipLabel>
    <relationshipName>recordsSP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>