unpackaged/main/default/objects/recordSP__c/fields/Numero_de_Lista__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Lista__c</fullName>
    <label>Numero de Lista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>