unpackaged/main/default/objects/recordSP__c/fields/Numero_de_Lista_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Lista_Buscar__c</fullName>
    <label>Numero de Lista Buscar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>